deps/v8/test/message/syntactic-tail-call-of-eval.out
*%(basename)s:8: SyntaxError: Tail call of a direct eval is not allowed
  return  continue  eval  ("f()")  ;
                    ^^^^^^^^^^^^^
SyntaxError: Tail call of a direct eval is not allowed
